--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -6,12 +6,12 @@
         <param name="onload" value="true" />
     </feature>
     <allow-intent href="market:*" />
-    <name>Pbkdf2Benchmark</name>
+    <name>HmacAndroid42</name>
     <description>
-        A sample Apache Cordova application that responds to the deviceready event.
+        BOOOOOOOOOOOOOOOOM
     </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+    <author email="ruben@rubensayshi.com">
+        Ruben
     </author>
     <content src="index.html" />
     <access origin="*" />
